# uk_power_gen_tracker

./: pyproject.toml
app/: app.py  get_current_gen_data.py
app/templates/: home.html
tests/: test_app.py  test_get_current_gen_data.py
