[tool.poetry]
name = "uk-power-gen-tracker"
version = "0.1.0"
description = "Project to build a UK power Generation tracker website"
authors = ["Tom brooks <tombrooks248@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
pandas = "^2.2.3"
requests = "^2.32.3"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
